@@ -697,7 +697,10 @@ foreach ($triggers as $trigger) {
 	$lastChangeDate = zbx_date2str(_('d M Y H:i:s'), $trigger['lastchange']);
 	$lastChange = empty($trigger['lastchange'])
 		? $lastChangeDate
-		: new CLink($lastChangeDate, 'events.php?triggerid='.$trigger['triggerid']);
+		: new CLink($lastChangeDate,
+			'events.php?triggerid='.$trigger['triggerid'].
+				'&stime='.date(TIMESTAMP_FORMAT, $trigger['lastchange']).'&period='.ZBX_PERIOD_DEFAULT
+		);
 
 	// acknowledge
 	if ($config['event_ack_enable']) {
